--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-hook-form": "^7.25.3",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
